@@ -8,7 +8,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZonedDateTime;
 import java.util.Base64;
 import java.util.HashMap;
@@ -171,7 +170,7 @@ public class LocalVCServletService {
 
         long timeNanoStart = System.nanoTime();
         // Find the local repository depending on the name.
-        Path repositoryDir = Paths.get(localVCBasePath, repositoryPath);
+        Path repositoryDir = Path.of(localVCBasePath, repositoryPath);
 
         log.debug("Path to resolve repository from: {}", repositoryDir);
         if (!Files.exists(repositoryDir)) {
@@ -426,7 +425,8 @@ public class LocalVCServletService {
     }
 
     public LocalVCRepositoryUri parseRepositoryUri(HttpServletRequest request) {
-        return new LocalVCRepositoryUri(request.getRequestURL().toString().replace("/info/refs", ""));
+        var urlString = request.getRequestURL().toString().replace("/info/refs", "");
+        return new LocalVCRepositoryUri(Path.of(urlString), localVCBaseUrl);
     }
 
     private LocalVCRepositoryUri parseRepositoryUri(Path repositoryPath) {
